microposts stuff added

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -3,7 +3,7 @@
 
 <% if signed_in? %>
 <h1 class="micropost">What's up?</h1>
-We're going to display some posts and a comment form here eventually.
+<%= render 'shared/micropost_form' %>
 <% else %>
 <%= link_to "Sign up now!", new_user_path, :class => "signup_button round" %>
 <% end %>
